sbotools3
Post-1.1
  * sbocheck: Use --nopull to check for updated SlackBuilds without updating the tree

1.1 - 2024-11-03
  * Bugfix: incorrect variable name caused sboupgrade to rebuild when unneeded.

1.0 - 2024-11-01
  * Change the git branch to match the Slackware version, or to a user-configured branch
  * Change the default URLs to support Slackware 15.0 and use git repositories
  * Use rsync default mirrors with RSYNC_DEFAULT (except for -current)
  * Detect build number changes and optionally upgrade
  * Detect and report out-of-tree _SBo SlackBuilds with sbocheck
  * Save any build options when running a SlackBuild
  * Install bash completions; zsh completions have been updated
  * Install a default configuration file; tweak sboconfig to play somewhat nicely with it

Historical Changes
2.7 - 2019-04-28
  * Actually fix the sbofind -e bug
    (https://github.com/pink-mist/sbotools/issues/71)

2.6 - 2019-04-27
  * Fix change in new perl versions where you need to escape { in regexp
    (https://github.com/pink-mist/sbotools/issues/75)
    (https://github.com/pink-mist/sbotools/issues/77)
    (https://github.com/pink-mist/sbotools/pull/78)
  * Add a --tries 5 option when downloading from sbosrcarch, which is a
    saner limit than the default of 20.
    (https://github.com/pink-mist/sbotools/pull/79)
  * Change sboclean options --clean-dist and --clean-work to shorter forms
    (https://github.com/pink-mist/sbotools/pull/52)
  * Add limited -current support using ponce's SBo repo for -current
    (https://github.com/pink-mist/sbotools/issues/73)
  * Fix bug with sboinstall --reinstall -r
    (https://github.com/pink-mist/sbotools/issues/72)
  * Fix bug with sbofind -e
    (https://github.com/pink-mist/sbotools/issues/71)

2.5 - 2018-02-14
  * Document download behaviour
    (https://github.com/pink-mist/sbotools/issues/66)
  * Remake sbosnap and sboremove to have OO semantics
  * Strip -compat32 from slackbuild names when looking them up