@@ -9,6 +9,7 @@ To make **sbotools3** packages from the master branch, see [sbotools3-git-slackb
 ## Changes
 * Post-1.1
   * sbocheck: Use --nopull to check for updated SlackBuilds without updating the tree
+  * sboremove: Remove undocumented and dangerous nointeractive option
 
 * 1.1 - 2024-11-03
   * Bugfix: incorrect variable name caused sboupgrade to rebuild when unneeded.
