@@ -1,6 +1,7 @@
 sbotools3
 Post-1.1
   * sbocheck: Use --nopull to check for updated SlackBuilds without updating the tree
+  * sboremove: Remove undocumented and dangerous nointeractive option
 
 1.1 - 2024-11-03
   * Bugfix: incorrect variable name caused sboupgrade to rebuild when unneeded.
